--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docco-husky",
+  "name": "docco-husky-bluelog",
   "description": "Generated static project documentation primarily for node.js projects. A fork of Docco",
   "keywords": [
     "documentation",
